Adds more description for Farmer-Cont and graphs with a more flattering parameterization

--- a/documents/WCSS2008Paper/paper.tex
+++ b/documents/WCSS2008Paper/paper.tex
@@ -82,6 +82,7 @@ The implementation took place using MASON simulation framework, see \cite{luke20
 
 The Cont model (\cite{cont2006}) is the simplest model implemented. All traders (agents) follow the same behavioral rules. They are heterogeneous in the sense that they are given independently assigned (subjective) volatility thresholds $\theta_i(t)$. Each period, all agents receive a common signal, which can be interpreted as public information or "news", in the form of IID Gaussian random variables $\epsilon_t ~ N(0,D^2)$. Each agent $i$ responds to this signal by selling if $\epsilon_t < -\theta_i(t)$, buying if $\epsilon_t > \theta_i(t)$, and otherwise sitting out the period. The market then determines the excess demand and arrives at the market clearing price by means of a market impact function. Lastly, with probability $s$, agents update their threshold to match the absolute value of the return rate for the current period. Somewhat surprisingly, even this very simple "zero intelligence" model of agent behavior yields fairly realistic market movements, as presented in Figures \ref{fig:ContSmallSSim} (for small $s$) and \ref{fig:ContLargeSSim} (for large value of $s$). 
 
+\paragraph*{}
 One down side of the Cont model that is not noted in the papers is that there appears to be a great degree of periodic cyclicality in the volatility of the markets. This is especially apparent with higher probability $s$ of updating thresholds. With $s=0.1$, this is readily apparent if you look at the autocorrelation of absolute returns over longer time scales than shown in the paper. This effect can be particularly well seen when averaging over many runs, as on Figure \ref{fig:ContMultiRun}. Holding $s$ constant at $0.1$ and varying $D$, we find the period and amplitude to be predictable.
 
 \begin{figure}[htbp]
@@ -148,7 +149,9 @@ The Farmer model (\cite{farmer2003}) has two types of agents, which trade a sing
 \item Impatient agents place \texttt{MarketOrders} of constant size $\sigma$ at a Poisson rate of $\mu$ per unit time.
 \item A double auction order book. This manages the pending limit orders and facilitates trades between market and limit orders. It also provides aggregate market information such as return rate per unit time and bid-ask spreads.
 \end{itemize}
+\paragraph*{}
 This model explains a large portion of the spread and price diffusion of actual stocks given an order flow rate, which implies that the double auction structure has a significant impact on the nature of market movements. The model also yields market behavior qualitatively close to actual markets in many respects, see Figure \ref{fig:sampleDynamicsFarmer}.
+\paragraph*{}
 However, as a model of market dynamics, it fails on some fronts. Notably, we do not see realistic volatility clustering. Volumes are fairly consistent, as are average returns. There is no lingering positive autocorrelation of absolute returns. Also notice the amplitude of single-period returns in Figure \ref{fig:sampleDynamicsFarmer}(g). The average per-step absolute returns are around $20\%$, much higher than empirically plausible, at least if a step is meant to signify short period, such as a day or less. This is clearly seen when we use actual prices in the order book. The same prices which look somewhat reasonable when viewed on a log scale appear quite volatile prices when viewed on a normal scale as in Figure \ref{fig:dynamicsFarmerNonLog}.
 
 \begin{figure}[htbp]
@@ -194,7 +197,10 @@ However, as a model of market dynamics, it fails on some fronts. Notably, we do 
 
 \subsection{Farmer-Cont Model}
 
-As an experiment, we constructed a model combining some aspects of the Farmer model with some aspects of the Cont model. The result is a model which is still essentially zero intelligence, but which exhibits empirically positive characteristics of both models. In this model there are two types of agents, which interact via the continuous double auction mechanism, as in Farmer. In fact, the Patient traders, which place limit orders and thus provide liquidity, remain the same. Impatient traders are modeled after Cont. They have heterogeneous volatility thresholds, and place market orders depending upon how public information in the form of a normally distributed random variable compares with these thresholds. Some fraction $s$ of agents then adjust their volatility thresholds in light of current volatility by setting it to the trailing period's return rate.
+As an experiment, we constructed a model combining some aspects of the Farmer model with some aspects of the Cont model. The result is a model which is still essentially zero intelligence, but which exhibits empirically positive characteristics of both models. In this model there are two types of agents, which interact via the continuous double auction mechanism, as in Farmer. In fact, the Patient traders, which place limit orders and thus provide liquidity, remain the same. Impatient traders are modeled after Cont. They have heterogeneous volatility thresholds, and place market orders depending upon how public information in the form of a normally distributed random variable $\epsilon_t ~ N(0,D^2)$ compares with these thresholds. Some fraction $s$ of agents then adjust their volatility thresholds in light of current volatility by setting it to the trailing period's return rate.
+
+\paragraph*{}
+The result is shown in Figure \ref{fig:FarmerContDynamics}. When there are sufficient limit orders being placed by Farmer's patient agents to ensure adequate liquidity for Market orders, we get dynamics that have many positive aspects compared with reality --- approximately power law return distribution, volatility clustering, realistic variability in linear prices, volumes, and returns, and essentially no predictability of future returns based upon past returns.
 
 \begin{figure}[htbp]
   \begin{center}
@@ -215,10 +221,10 @@ As an experiment, we constructed a model combining some aspects of the Farmer mo
       \quad
       \subfigure[Snapshot of orderbook.]{\scalebox{0.33}{\includegraphics[width=1.00\textwidth]{../graphics/FC-orderbooks.pdf}}}
       \quad
-      \subfigure[Autocorrelation of absolute returns.]{\scalebox{0.33}{\includegraphics[width=1.00\textwidth]{../graphics/FC-acfReturns.pdf}}}
+      \subfigure[Autocorrelation of returns.]{\scalebox{0.33}{\includegraphics[width=1.00\textwidth]{../graphics/FC-acfReturns.pdf}}}
       }
-    \caption{Examples of outputs and statistics from a single run of the Farmer-Cont hybrid.}
-    \label{fig:ContLargeSSim}
+    \caption{Examples of outputs and statistics from a single run of the Farmer-Cont hybrid FinancialModel simulation with actual prices, $D=0.001$, $s=0.01$, $\alpha=0.9$, $\delta=0.2$, and $\mu=0.4$.}
+    \label{fig:FarmerContDynamics}
   \end{center}
 \end{figure}
 
