--- a/documents/WCSS2008Paper/paper.tex
+++ b/documents/WCSS2008Paper/paper.tex
@@ -80,7 +80,7 @@ The implementation took place using MASON simulation framework, see \cite{luke20
 
 \subsection{Cont Model}
 
-The Cont model (\cite{cont2006}) is the simplest model implemented. All traders (agents) follow the same behavioral rules. They are heterogeneous in the sense that they are given independently assigned (subjective) volatility thresholds $\theta_i(t)$. Each period, all agents receive a common signal, which can be interpreted as public information or "news", in the form of IID Gaussian random variables $\epsilon_t ~ N(0,D^2)$. Each agent $i$ responds to this signal by selling if $\epsilon_t < -\theta_i(t)$, buying if $\epsilon_t > \theta_i(t)$, and otherwise sitting out the period. The market then determines the excess demand and arrives at the market clearing price by means of a market impact function. Lastly, with probability $s$, agents update their threshold to match the absolute value of the return rate for the current period. Somewhat surprisingly, even this very simple "zero intelligence" model of agent behavior yields fairly realistic market movements, as presented in Figures \ref{fig:ContSmallSSim} (for small $s$) and \ref{fig:ContLargeSSim} (for large value of $s$). 
+The Cont model (\cite{cont2006}) is the simplest model implemented. All traders (agents) follow the same behavioral rules. They are heterogeneous in the sense that they are given independently assigned (subjective) volatility thresholds $\theta_i(t)$. Each period, all agents receive a common signal, which can be interpreted as public information or "news", in the form of IID Gaussian random variables $\epsilon_t \sim N(0,D^2)$. Each agent $i$ responds to this signal by selling if $\epsilon_t < -\theta_i(t)$, buying if $\epsilon_t > \theta_i(t)$, and otherwise sitting out the period. The market then determines the excess demand and arrives at the market clearing price by means of a market impact function. Lastly, with probability $s$, agents update their threshold to match the absolute value of the return rate for the current period. Somewhat surprisingly, even this very simple "zero intelligence" model of agent behavior yields fairly realistic market movements, as presented in Figures \ref{fig:ContSmallSSim} (for small $s$) and \ref{fig:ContLargeSSim} (for large value of $s$). 
 
 \paragraph*{}
 One down side of the Cont model that is not noted in the papers is that there appears to be a great degree of periodic cyclicality in the volatility of the markets. This is especially apparent with higher probability $s$ of updating thresholds. With $s=0.1$, this is readily apparent if you look at the autocorrelation of absolute returns over longer time scales than shown in the paper. This effect can be particularly well seen when averaging over many runs, as on Figure \ref{fig:ContMultiRun}. Holding $s$ constant at $0.1$ and varying $D$, we find the period and amplitude to be predictable.
@@ -189,7 +189,7 @@ However, as a model of market dynamics, it fails on some fronts. Notably, we do 
       \quad
 \subfigure[Same prices (natural scale).]{\scalebox{0.5}{\includegraphics[width=1.00\textwidth]{../graphics/Farmer-linear-pricesPlot.pdf}}}
       }
-    \caption{Examples of outputs and statistics from a single run of the FinancialModel simulation with $\alpha=.585$, $\delta=.39$, $\mu=.325$, $\sigma=1$. These parameters are derived from empirical data.}
+    \caption{Examples of outputs and statistics from a single run of the FinancialModel simulation with $\alpha=.585$, $\delta=.39$, $\mu=.325$, $\sigma=1$ shown in actual, rather than log prices}
     \label{fig:dynamicsFarmerNonLog}
   \end{center}
 \end{figure}
@@ -197,10 +197,10 @@ However, as a model of market dynamics, it fails on some fronts. Notably, we do 
 
 \subsection{Farmer-Cont Model}
 
-As an experiment, we constructed a model combining some aspects of the Farmer model with some aspects of the Cont model. The result is a model which is still essentially zero intelligence, but which exhibits empirically positive characteristics of both models. In this model there are two types of agents, which interact via the continuous double auction mechanism, as in Farmer. In fact, the Patient traders, which place limit orders and thus provide liquidity, remain the same. Impatient traders are modeled after Cont. They have heterogeneous volatility thresholds, and place market orders depending upon how public information in the form of a normally distributed random variable $\epsilon_t ~ N(0,D^2)$ compares with these thresholds. Some fraction $s$ of agents then adjust their volatility thresholds in light of current volatility by setting it to the trailing period's return rate.
+As an experiment, we constructed a model combining some aspects of the Farmer model with some aspects of the Cont model. The result is a model which is still essentially zero intelligence, but which exhibits empirically positive characteristics of both models. In this model there are two types of agents, which interact via the continuous double auction mechanism, as in Farmer. In fact, the Patient traders, which place limit orders and thus provide liquidity, remain the same. Impatient traders are modeled after Cont. They have heterogeneous volatility thresholds, and place market orders depending upon how public information in the form of a normally distributed random variable $\epsilon_t \sim N(0,D^2)$ compares with these thresholds. Some fraction $s$ of agents then adjust their volatility thresholds in light of current volatility by setting it to the trailing period's return rate.
 
 \paragraph*{}
-The result is shown in Figure \ref{fig:FarmerContDynamics}. When there are sufficient limit orders being placed by Farmer's patient agents to ensure adequate liquidity for Market orders, we get dynamics that have many positive aspects compared with reality --- approximately power law return distribution, volatility clustering, realistic variability in linear prices, volumes, and returns, and essentially no predictability of future returns based upon past returns.
+The result is shown in Figure \ref{fig:FarmerContDynamics}. When there are sufficient limit orders being placed by Farmer's patient agents to ensure adequate liquidity for Market orders, we get dynamics that have many positive aspects compared with reality --- approximately power law return distribution, volatility clustering, realistic variability in \emph{actual} prices, volumes, and returns, and essentially no predictability of future returns based upon past returns.
 
 \begin{figure}[htbp]
   \begin{center}
@@ -219,7 +219,7 @@ The result is shown in Figure \ref{fig:FarmerContDynamics}. When there are suffi
     \mbox{
       \subfigure[Annualized moving average volatility]{\scalebox{0.33}{\includegraphics[width=1.00\textwidth]{../graphics/FC-avgVolatility.pdf}}}
       \quad
-      \subfigure[Snapshot of orderbook.]{\scalebox{0.33}{\includegraphics[width=1.00\textwidth]{../graphics/FC-orderbooks.pdf}}}
+      \subfigure[Snapshot of orderbook (log x scale).]{\scalebox{0.33}{\includegraphics[width=1.00\textwidth]{../graphics/FC-orderbooks.pdf}}}
       \quad
       \subfigure[Autocorrelation of returns.]{\scalebox{0.33}{\includegraphics[width=1.00\textwidth]{../graphics/FC-acfReturns.pdf}}}
       }
