Just some final housekeeping...

--- a/documents/WCSS2008Paper/paper.tex
+++ b/documents/WCSS2008Paper/paper.tex
@@ -23,12 +23,12 @@
 
 \mainmatter
 
-\title{Simulating Financial Markets using MASON Framework\thanks{Prepared for the 2nd World Congress on Social Simulation, GMU, Fairfax, 14--17 July, 2008.}}
+\title{Simulating Financial Markets using MASON Framework}
 
 \titlerunning{Financial Markets using MASON}
-\authorrunning{R. Axtell et al.}
+\authorrunning{CSS739 et al.}
 
-\author{Robert Axtell$^{a}$ \and CSS 739 Class Project Team\thanks{Programming Group: Justin Briggs, Francesco Trusiano, Maciej \L atek, Randy Marks. Data Analysis Group: Sandler Lin, Cheryl Hansen and Thomas Tzitzouris.}}
+\author{CSS 739 Class Project Team\thanks{Programming Group: Justin Briggs, Francesco Trusiano, Maciej \L atek, Randy Marks. Data Analysis Group: Sandler Lin, Cheryl Hansen and Thomas Tzitzouris.}}
 
 
 \institute{
@@ -37,7 +37,7 @@
 \url{http://socialcomplexity.gmu.edu}}
 
 
-\institute{$^{a}$Center for Social Complexity, George Mason University, USA \\
+\institute{Center for Social Complexity, George Mason University, USA \\
 \mailsg}
 
 \date{\today}
